src/styles/homepage.scss
@charset "utf-8";

@import "css/reset";
@import 
"components/fonts",
"components/variables",
"components/mixins",
"components/root",
"components/type",
"components/grid",
"components/utility",
"components/header",
"components/footer"
;

.header,
.homepage {
    background-color: var(--color-indigo);
}

.homepage {
    .hero {
        display: grid;
        
        @include media(small) {
            grid-template-columns: 1fr 1fr;
            gap: var(--spacer-two);
        }

        .hi {
            background-color: var(--color-gray-950);
            color: var(--color-yellow);
            font-size: var(--spacer-seven);
            border-radius: var(--spacer-oneandhalf);
            padding: var(--spacer-threeandhalf) 0 ;
            box-sizing: border-box;
            display: flex;
            align-items: center ;
            justify-content: center;

            @include media(big) {
                font-size: var(--spacer-eight);
            }

            @include media(bigger) {
                font-size: var(--spacer-nine);
            }

            @include media(biggest) {
                font-size: var(--spacer-ten);
            }
        }
        
        h1 {
            font-size: var(--spacer-two);
            @include media(small) {
                margin-top: 0;
            }

            @include media(medium) {
                font-size: var(--spacer-twoandhalf);
                font-weight: 400;
            }

            @include media(bigger) {
                font-size: var(--spacer-twoandthreequarter);
            }

            @include media(biggest) {
                font-size: var(--spacer-threeandhalf);
            }

            @include media(bigass) {
                font-size: var(--spacer-five);
            }
        }

        p {
            @include media(small) {
                margin-bottom: 0;
            }
        }
    }
    
    &.box {
        margin-top: 0;
    }
    h2 {
        width: 100%;
        @include media(small) {
                width: 92%;
        }
    }

    .hero, .recent-works {
        margin-bottom: var(--spacer-two);

        @include media(small) {
            margin-bottom: var(--spacer-five);
        }
    }


    .recent-works li {
        padding-bottom: var(--spacer-half);
        border-bottom: 1px solid var(--color-turquoise-gray);
        margin-bottom: var(--spacer-two);

        @include media(small){
            padding-bottom: var(--spacer-three);
                border-bottom: 1px solid var(--color-turquoise-gray);
                margin-bottom: var(--spacer-three);
        }

        &:last-child {
            padding-bottom: 0;
            border-bottom: 0;
            margin-bottom: 0;
        }

        h4 > a {
            color: var(--color-black) ;
        }
    }

    .single {
        @include media(small) {
            display: grid;
            grid-template-columns: 1fr 1fr;
            gap: var(--spacer-two);
            direction: rtl;
        }
        
        &:nth-child(even) {
            @include media(small) {
                    direction: ltr;
                }
        }
        

        h4 {
            @include media(small) {
                margin-top: 0;
            }
        }

        
    }

    .page-404 {
        padding: var(--spacer-three) 0;
    }
}

